--- a/media_export.conf
+++ b/media_export.conf
@@ -1,27 +1,21 @@
 # NetWorker  Server
 $NSRSERVER="bocntbk12.boc.chevrontexaco.qnet";
-
-#
 # what is the name of our physical jukebox
 $JB="bocntbk12_IBM";
-
 #
 # place pools here to be ejected daily
 @POOLS=("PlatClone","GoldClone");
-
 #
 # The location to set our offsite tapes to
 $LOCATION="offsite";
-
 #
 # how far back to catch offsite tapes.  this should cover a long weekend.
 $TIME="last week";
-
 #
 # Mail Server
 $MAILSERV="mailhost-hou150.chevrontexaco.net";
-
 #
 # configure the mail server
 $MAILER="smtpmail \-s \"$JB export report to $LOCATION\" \-h $MAILSERV \-f gnmi\@chevron.com gnmi\@chevron.com";
-
+# the query string for our mminfo query
+$MMQ="!incomplete, !volrecycle, \%used > 100, savetime < $TIME, location=$JB";
